code25_all/python/1518659.txt
class Alarm:

    def timer():

    def main():
        print ("Timer has Started")

    main()

alarm > python alarm.py 
  File "alarm.py", line 5
    def main():
      ^
IndentationError: expected an indented block

